design: font 추가

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
   src: url('./assets/fonts/PretendardVariable.woff2');
 }
 
+@font-face {
+  font-family: 'CWDangamAsac-Bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/CWDangamAsac-Bold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   overflow: hidden;
